--- a/Landing/index.html
+++ b/Landing/index.html
@@ -17,10 +17,10 @@
 
 <body>
     <section id="awesome">
-        <div class="container">
+        <div class="container" id="awesome__container">
             <h2 class = "title"> Why this is awesome </h2>
             <div class = "line"></div>
-            <div class="description">
+            <div class="description" id="awesome__description">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="awesome__wrap">
@@ -62,6 +62,52 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="price">
+        <div class="container" id="price__container">
+            <h2 class="title">pricing options</h2>
+            <div class="line"></div>
+            <div class="description" id="price__description">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="price__list">
+                <ul class="price__list__basic">
+                    <li class="price__list__name">Basic</li>
+                    <li class="price__list__amount">$10</li>
+                    <li class="price__list__time-of-usage">Free for life</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                </ul>
+                <ul class="price__list__optima">
+                    <li class="price__list__name">Optima</li>
+                    <li class="price__list__amount">$20</li>
+                    <li class="price__list__time-of-usage">Free for life</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                </ul>
+                <ul class="price__list__pro">
+                    <li class="price__list__name">Pro</li>
+                    <li class="price__list__amount">$30</li>
+                    <li class="price__list__time-of-usage">Free for life</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                    <li class="price__list__advantage">1 gb of space</li>
+                </ul>
+            </div>
+
+        </div>
+
     </section>
 </body>
 
